Use redux for creating a quiz

--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "lodash": "^4.17.15",
     "nanoid": "^2.0.3",
     "next": "^9.0.0",
+    "next-redux-wrapper": "^3.0.0-alpha.3",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-d3-components": "^0.9.1",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.3.2",
     "winston": "^3.2.1"
   },
