--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "config": "config"
   },
   "scripts": {
-    "dev": "yarn nodemon api/index.js",
+    "dev": "yarn nodemon api/index.js --watch api",
     "build": "next build",
     "start": "NODE_ENV=production node api/index.js"
   },
@@ -49,6 +49,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-styled-components": "^1.10.6",
     "husky": "^3.0.0",
     "nodemon": "^1.19.1",
